adding index.html
To check if it changes anything at all in the website

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
 	<h1>
-		<div class="geeks">Eat It Away</div>
+		<div class="geeks">Eat Away</div>
 	</h1>
+	
 	<canvas id="board"></canvas>
     <div class="flex-container">
         <input id="resetbtn" type="button" value="Play Again" onclick="window.location.reload(true)">
